syntax = "proto3";

package pb;

option go_package = "demo_consul/pb";


message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string res = 1;
}

service HelloService{
  rpc SayHello(HelloRequest) returns(HelloResponse){}
}

